--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -6,6 +6,7 @@
 @media (prefers-color-scheme: dark) {
     body {
         background-color: black;
-        filter: hue-rotate(180deg) invert(90%);
+        color: white;
+        /*filter: hue-rotate(180deg) invert(90%);*/
     }
 }
