minor style changes

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,8 +21,8 @@
             {% endif %}
         </a>
 
-        <div style="font-size: 14px;">
-            <span><a href="{{ "/blog" | absolute_url }}">Blog</a></span>
+        <div style="font-size: 14px; display:flex;">
+            <span style="align-self:flex-end;"><a href="{{ "/blog" | absolute_url }}">Blog</a></span>
         </div>
     
     </h1>
