modified blog page + added reading time plugin

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
         </a>
 
         <div style="font-size: 14px; display:flex;">
-            <span style="align-self:flex-end;"><a href="{{ "/blog" | absolute_url }}">Blog</a></span>
+            <span style="align-self:flex-end; padding: 0px 10px;"><a href="{{ "/blog" | absolute_url }}">Blog</a></span>
         </div>
     
     </h1>
