--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -10,3 +10,13 @@
         /*filter: hue-rotate(180deg) invert(90%);*/
     }
 }
+
+.post-title {
+    display: block;
+    font-size: 1.6rem;
+}
+
+.post-meta {
+    font-size: 12px;
+    color: #6467c5;
+}
