--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -16,7 +16,11 @@
     font-size: 1.6rem;
 }
 
+a .post-title{
+    color: unset;
+}
+
 .post-meta {
     font-size: 12px;
-    color: #6467c5;
+    color: #999999;
 }
