--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
     <div class="container-lg px-3 my-5 markdown-body">
       
       <h1 style="display:flex; justify-content: space-between;">
-        <a style="color: unset;" href="{{ "/" | absolute_url }}">
+        <a style="color: unset; text-decoration: underline;" href="{{ "/" | absolute_url }}">
             {% if site.title and site.title != page.title %}
                 {{ site.title }}
             {% else %}
