--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -14,13 +14,19 @@
 .post-title {
     display: block;
     font-size: 1.6rem;
+    text-decoration: underline;
 }
 
 a.post-title{
     color: unset;
+
 }
 
 .post-meta {
     font-size: 12px;
     color: #999999;
+}
+
+.article-title{
+    border-bottom: unset;
 }
