--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,6 +3,13 @@ layout: default
 ---
 
 <h1 class="article-title">{{ page.title }}</h1>
-
+<div><span class="post-meta">{{ page.date | date: "%-d %B %Y" }}</span> | 
+    <span>Posted by
+        {% if post.author %}
+        {{ post.author }}
+        {% else %}
+        {{ site.author }}
+        {% endif %}
+    </span></div>
 
 {{ content }}
