--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -11,6 +11,11 @@
     }
 }
 
+.logo-image{
+    background-color: unset!important;
+    max-width: 80%;
+}
+
 .post-title {
     display: block;
     font-size: 1.6rem;
