--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -35,3 +35,13 @@ a.post-title{
 .article-title{
     border-bottom: unset!important;
 }
+
+.topic-badge{
+    display: inline-block;
+    border-radius: 10px;
+    color: white!important;
+    background-color: rgb(5, 5, 116);
+    font-size: smaller;
+    margin: 2px;
+    padding: 2px;
+}
