--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -43,5 +43,21 @@ a.post-title{
     background-color: rgb(5, 5, 116);
     font-size: smaller;
     margin: 2px;
-    padding: 2px;
+    padding: 4px;
+}
+
+.topic-badge:nth-of-type(4n) {
+    background-color: rgb(255, 179, 0);
+}
+
+.topic-badge:nth-of-type(4n + 1) {
+    background-color: rgb(255, 0, 153);
+}
+
+.topic-badge:nth-of-type(4n + 2) {
+    background-color: rgb(0, 255, 34);
+}
+
+.topic-badge:nth-of-type(4n + 3) {
+    background-color: rgb(255, 85, 0);
 }
