--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -55,7 +55,7 @@ a.post-title{
 }
 
 .topic-badge:nth-of-type(4n + 2) {
-    background-color: rgb(0, 255, 34);
+    background-color: #0f811c;
 }
 
 .topic-badge:nth-of-type(4n + 3) {
