--- a/_includes/ytPlayer.html
+++ b/_includes/ytPlayer.html
@@ -1,9 +1,24 @@
 <div class="embed-container">
   <iframe
       src="https://www.youtube.com/embed/{{ include.id }}"
-      width="700"
-      height="480"
       frameborder="0"
       allowfullscreen="true">
   </iframe>
 </div>
+
+<style>
+.embed-container {
+    position: relative;
+    max-width: 100%;
+    height: 0;
+    /*padding-bottom: 56.25%;*/
+}
+
+iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+</style>
