--- a/_includes/ytPlayer.html
+++ b/_includes/ytPlayer.html
@@ -11,8 +11,8 @@
     position: relative;
     min-width: 380px;
     max-width: 100%;
-    /*height: 0;
-    padding-bottom: 56.25%;*/
+    height: 0;
+    padding-bottom: 56.25%;
 }
 
 iframe {
