show images in projects list

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -36,6 +36,14 @@ a.post-title{
     border-bottom: unset!important;
 }
 
+.feed-post-container{
+    display: flex;
+}
+
+.feed-post-image{
+    max-width: 50px;
+}
+
 .topic-badge{
     display: inline-block;
     border-radius: 10px;
