--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -41,7 +41,9 @@ a.post-title{
 }
 
 .feed-post-image{
-    max-width: 50px;
+    width: 80px;
+    height: 80px;
+    margin: 5px;
 }
 
 .topic-badge{
