added link to projects in navbar

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,8 +17,9 @@
             <img class="logo-image" src="{{ '/paciosoft-logo.png' | relative_url }}" alt="{{ site.title }}">
         </a>
 
-        <div style="font-size: 14px; display:flex;">
-            <span style="align-self:flex-end; padding: 0px 10px;"><a href="{{ "/blog" | absolute_url }}">Blog</a></span>
+        <div class="navbar-links-container">
+            <span class="navbar-link"><a href="{{ "/projects" | absolute_url }}">Projects</a></span>
+            <span class="navbar-link"><a href="{{ "/blog" | absolute_url }}">Blog</a></span>
         </div>
     
     </h1>
