--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -54,7 +54,8 @@ a.post-title{
 .feed-post-image{
     width: 90px;
     height: 90px;
-    margin: 10px;
+    margin-top: 10px;
+    margin-right: 10px;
 }
 
 .topic-badge{
