--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -29,6 +29,10 @@
     text-decoration: underline;
 }
 
+a .navbar-link{
+    color:unset!important;
+}
+
 .post-title {
     display: inline-block;
     font-size: 1.6rem;
