--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,12 +3,36 @@
 
 @import "{{ site.theme }}";
 
-@media (prefers-color-scheme: dark) {
-    body {
-        background-color: black;
-        color: white;
-        /*filter: hue-rotate(180deg) invert(90%);*/
-    }
+// @media (prefers-color-scheme: dark) {
+//     body {
+//         background-color: black;
+//         color: white;
+//         /*filter: hue-rotate(180deg) invert(90%);*/
+//     }
+// }
+
+// https://stackoverflow.com/questions/56300132/how-to-override-css-prefers-color-scheme-setting
+// root/default variables
+:root {
+    --font-color: #000;
+    --link-color:#1C75B9;
+    --link-white-color:#fff;
+    --bg-color: rgb(243,243,243);
+}
+//dark theme
+[data-theme="dark"] {
+    --font-color: #c1bfbd;
+    --link-color:#0a86da;
+    --link-white-color:#c1bfbd;
+    --bg-color: #333;
+}
+//the redundancy is for backwards compatibility with browsers that do not support CSS variables.
+body
+{
+    color:#000;
+    color:var(--font-color);
+    background:rgb(243,243,243);
+    background:var(--bg-color);
 }
 
 .logo-image{
