--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,14 @@
 
 
-<label id="theme-switch" class="theme-switch" for="checkbox_theme">
-    <input type="checkbox" id="checkbox_theme">
-</label>
+<!-- <label id="theme-switch" class="theme-switch" for="checkbox_theme">
+    <input type="checkbox">
+</label> -->
+
+<div class="theme-toggle-wrapper">
+    <label class="switch">
+      <input type="checkbox" id="checkbox_theme">
+      <span class="slider"></span>
+    </label>
+  </div>
 
 <a href="">github</a>
