trying to fix import

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,7 +3,7 @@
 
 @import "{{ site.theme }}";
 
-@import "theme-toggle";
+@import "assets/css/theme-toggle";
 
 // @media (prefers-color-scheme: dark) {
 //     body {
