--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,7 +3,8 @@
 
 @import "{{ site.theme }}";
 
-@import "{{ '/assets/css/theme-toggle.scss' | relative_url }}";
+@import "theme-toggle.scss";
+//@import "{{ '/assets/css/theme-toggle.scss' | relative_url }}";
 
 // @media (prefers-color-scheme: dark) {
 //     body {
