--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,11 +1,11 @@
 
 
-<!-- <label id="theme-switch" class="theme-switch" for="checkbox_theme">
+<!-- <label class="theme-switch" >
     <input type="checkbox">
 </label> -->
 
-<div class="theme-toggle-wrapper">
-    <label class="switch">
+<div class="theme-toggle-wrapper" for="checkbox_theme">
+    <label class="switch" id="theme-switch" >
       <input type="checkbox" id="checkbox_theme">
       <span class="slider"></span>
     </label>
