--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -30,11 +30,11 @@ function switchTheme(e) {
     if (e.target.checked) {
         localStorage.setItem('theme', 'dark');
         document.documentElement.setAttribute('data-theme', 'dark');
-        toggleSwitch.checked = true;
+        //toggleSwitch.checked = true;
     } else {
         localStorage.setItem('theme', 'light');
         document.documentElement.setAttribute('data-theme', 'light');
-        toggleSwitch.checked = false;
+        //toggleSwitch.checked = false;
     }    
 }
 
