--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -40,18 +40,18 @@ footer{
 }
 
 @media screen and (min-width: 600px){
-    .footer-col:first-child {
+    .footer-column:first-child {
         padding-right: 15px;
         padding-left: 0;
     }
 
-    .footer-col {
+    .footer-column {
         width: calc(100% - (30px / 2));
         padding: 0 15px;
     }
-    .footer-col {
-        margin-bottom: 15px;
-    }
+}
+.footer-column {
+    margin-bottom: 15px;
 }
 
 
