--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,7 +11,7 @@
             </span>
         </div>
 
-        <div class="footer-column"></div>
+        <div class="footer-column">
             <div class="theme-toggle-wrapper" for="checkbox_theme">
                 <label class="switch" id="theme-switch" >
                 <input type="checkbox" id="checkbox_theme">
