--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -34,7 +34,7 @@ footer{
 .footer-grid{
     display: flex;
     flex-wrap: wrap;
-    max-width: 50%; /* calc(800px - (30px * 2)); */
+    max-width: calc(800px - (30px * 2));
     padding-right: 30px;
     padding-left: 30px;
     margin: auto;
@@ -47,7 +47,7 @@ footer{
     }
 
     .footer-column {
-        width: calc(100% - (30px / 2));
+        width: 50%; /* calc(100% - (30px / 2));*/
         padding: 0 15px;
     }
 }
