--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -24,14 +24,17 @@
         </div>
 
         <div class="footer-column">
-            <p style="display: flex;">
-                <span style="align-self: center; padding-right: 15px;"> Theme </span>
-                <div style="display: inline-block;" class="theme-toggle-wrapper" for="checkbox_theme">
-                    <label class="switch" id="theme-switch" >
-                    <input type="checkbox" id="checkbox_theme">
-                    <span class="slider"></span> 
-                    </label>
+            <div style="display: flex;">
+                    <span style="align-self: center; padding-right: 15px;"> Theme </span>
+                    <div style="display: inline-block;" class="theme-toggle-wrapper" for="checkbox_theme">
+                        <label class="switch" id="theme-switch" >
+                        <input type="checkbox" id="checkbox_theme">
+                        <span class="slider"></span> 
+                        </label>
+                    </div>
                 </div>
+            <p>
+                Made with Jekyll, hosted on GitHub Pages
             </p>
         </div>
         
