--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -29,9 +29,9 @@
             </p>
         </div>
 
-        <div class="footer-column">
-            <p style="text-align: right;">Giacomo Pacini</p>
-            <p style="text-align: right;">
+        <div class="footer-column right-column">
+            <p>Giacomo Pacini</p>
+            <p>
                 Powered by Jekyll, hosted on GitHub Pages
             </p>
             <div style="display: flex; justify-content: right;">
@@ -88,6 +88,10 @@ footer{
     .footer-column {
         width: 50%; /* calc(100% - (30px / 2));*/
         padding: 0 15px;
+    }
+
+    .right-column{
+        text-align: right;
     }
 }
 .footer-column {
