uploaded new suggested question screenshot

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -30,7 +30,7 @@
     --link-color:#0a86da;
     --link-white-color:#c1bfbd;
     --bg-color: #333;
-    --highlight-bg-color: #6f6f6f;
+    --highlight-bg-color: #4b4b4b;
 }
 //the redundancy is for backwards compatibility with browsers that do not support CSS variables.
 body
