added how tos link in footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -34,6 +34,9 @@
             <p>
                 Powered by Jekyll, hosted on GitHub Pages
             </p>
+            <p>
+                <a href="{{'/how-tos' | relative_url}}">How Tos</a>
+            </p>
             <div style="display: flex; justify-content: right;">
                         <span style="padding-right: 15px;"> Theme </span>
                     <div style="display: inline-block;" class="theme-toggle-wrapper" for="checkbox_theme">
