--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -30,10 +30,16 @@
         </div>
 
         <div class="footer-column right-column">
-            <p>Giacomo Pacini</p>
+            <!-- <p>Giacomo Pacini</p> -->
             <!-- <p>
                 Powered by Jekyll, hosted on GitHub Pages
             </p> -->
+            <p>
+                <a href="{{'/projects' | relative_url}}">Projects</a>
+            </p>
+            <p>
+                <a href="{{'/blog' | relative_url}}">Blog</a>
+            </p>
             <p>
                 <a href="{{'/how-tos' | relative_url}}">How Tos</a>
             </p>
