--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -130,5 +130,5 @@ a.post-title{
 }
 
 .topic-badge:nth-of-type(6n + 5) {
-    background-color: rgb(25, 112, 24);
+    background-color: #008080;
 }
