--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
         </a>
 
         <div class="navbar-links-container">
-            <span class="navbar-link"><a href="{{ "/pubblications" | absolute_url }}">Pubblications</a></span>
+            <span class="navbar-link"><a href="{{ "/publications" | absolute_url }}">Publications</a></span>
             <span class="navbar-link"><a href="{{ "/projects" | absolute_url }}">Projects</a></span>
             <span class="navbar-link"><a href="{{ "/blog" | absolute_url }}">Blog</a></span>
         </div>
