added goat counter

--- a/_includes/head-custom-google-analytics.html
+++ b/_includes/head-custom-google-analytics.html
@@ -7,3 +7,6 @@
 
   gtag('config', 'G-GH654FZ21F');
 </script>
+
+<script data-goatcounter="https://paciosoft.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
